# otus_cpp_final_project

./: BM25.cpp  BM25.h  CMakeLists.txt  FileReader.cpp  FileReader.h  IndexCommon.h  IndexIO.cpp  IndexIO.h  README.md  constants.h  fixew_priority_queue.cpp  fixew_priority_queue.h  main.cpp  main_test.h
.github/workflows/: main.yml
.github/workflows /: release.yml
input_2/: 1.json  2.json  3.json
input_doc/: 1.json  2.json
